--- a/04-Milestone Project - 1/03-Milestone Project 1 - Complete Walkthrough Solution.ipynb
+++ b/04-Milestone Project - 1/03-Milestone Project 1 - Complete Walkthrough Solution.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +44,35 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<font color='red'>Note that we're only *defining* a function to display the board. We create the board and run this function much later in our code!</font>"
+    "**TEST Step 1:** run your function on a test version of the board list, and make adjustments as necessary"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   |   |\n",
+      " X | O | X\n",
+      "   |   |\n",
+      "-----------\n",
+      "   |   |\n",
+      " O | X | O\n",
+      "   |   |\n",
+      "-----------\n",
+      "   |   |\n",
+      " X | O | X\n",
+      "   |   |\n"
+     ]
+    }
+   ],
+   "source": [
+    "test_board = ['#','X','O','X','O','X','O','X','O','X']\n",
+    "display_board(test_board)"
    ]
   },
   {
@@ -56,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +92,7 @@
     "    marker = ''\n",
     "    \n",
     "    while not (marker == 'X' or marker == 'O'):\n",
-    "        marker = input('Player 1: Do you want to be X or O?').upper()\n",
+    "        marker = input('Player 1: Do you want to be X or O? ').upper()\n",
     "\n",
     "    if marker == 'X':\n",
     "        return ('X', 'O')\n",
@@ -76,12 +104,46 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "**TEST Step 2:** run the function to make sure it returns the desired output"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Player 1: Do you want to be X or O? x\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "('X', 'O')"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "player_input()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "**Step 3: Write a function that takes in the board list object, a marker ('X' or 'O'), and a desired position (number 1-9) and assigns it to the board.**"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,12 +155,47 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "**TEST Step 3:** run the place marker function using test parameters and display the modified board"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   |   |\n",
+      " X | $ | X\n",
+      "   |   |\n",
+      "-----------\n",
+      "   |   |\n",
+      " O | X | O\n",
+      "   |   |\n",
+      "-----------\n",
+      "   |   |\n",
+      " X | O | X\n",
+      "   |   |\n"
+     ]
+    }
+   ],
+   "source": [
+    "place_marker(test_board,'$',8)\n",
+    "display_board(test_board)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "**Step 4: Write a function that takes in a board and checks to see if someone has won. **"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -112,6 +209,33 @@
     "    (board[9] == mark and board[6] == mark and board[3] == mark) or # down the right side\n",
     "    (board[7] == mark and board[5] == mark and board[3] == mark) or # diagonal\n",
     "    (board[9] == mark and board[5] == mark and board[1] == mark)) # diagonal"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**TEST Step 4:** run the win_check function against our test_board - it should return True"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "win_check(test_board,'X')"
    ]
   },
   {
@@ -294,7 +418,7 @@
     "            else:\n",
     "                if full_board_check(theBoard):\n",
     "                    display_board(theBoard)\n",
-    "                    print('The game is a tie!')\n",
+    "                    print('The game is a draw!')\n",
     "                    break\n",
     "                else:\n",
     "                    turn = 'Player 1'\n",
