--- a/00-Python Object and Data Structure Basics/09-Objects and Data Structures Assessment Test.ipynb
+++ b/00-Python Object and Data Structure Basics/09-Objects and Data Structures Assessment Test.ipynb
@@ -33,13 +33,13 @@
    "source": [
     "Numbers: data type on number\n",
     "\n",
-    "Strings: \n",
+    "Strings: Ordered sequence of characters\n",
     "\n",
-    "Lists: \n",
+    "Lists: Ordered sequence of objects (mutable)\n",
     "\n",
-    "Tuples: like const\n",
+    "Tuples: Ordered sequence of objects(immutable)\n",
     "\n",
-    "Dictionaries: \n"
+    "Dictionaries: Key-Value pairing that is unordered\n"
    ]
   },
   {
@@ -78,7 +78,9 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#1. 44\n",
@@ -192,15 +194,6 @@
    "source": [
     "2 ** (0.5)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -393,7 +386,9 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "mylist2 = []\n",
@@ -424,7 +419,9 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "list3[2][2] = 'goodbye'"
@@ -608,7 +605,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Can you sort a dictionary? Why or why not?<br><br>"
+    "Can you sort a dictionary? Why or why not?<br><br>\n",
+    "**Answer:No. Because normal dictionaries are mappings not a sequence.**"
    ]
   },
   {
@@ -622,7 +620,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "What is the major difference between tuples and lists?<br><br>"
+    "What is the major difference between tuples and lists?<br><br>\n",
+    "**Answer: Tuples are imuutable.**"
    ]
   },
   {
